objects/Asset.object
<CustomObject>
    <fields>
        <fullName>wkitsm__AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssetsAssignedTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Cache__c</fullName>
        <label>Cache</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChassisType__c</fullName>
        <label>Chassis Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Chipset__c</fullName>
        <label>Chipset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ComputerId__c</fullName>
        <label>ComputerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ConfigurationItemClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to ConfigurationItemClass__c object</description>
        <inlineHelpText>Lookup to ConfigurationItemClass__c object</inlineHelpText>
        <label>Configuration Item Class</label>
        <referenceTo>wkitsm__ConfigurationItemClass__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>AssetsCIClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ConnectionType__c</fullName>
        <label>Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Cost__c</fullName>
        <label>Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__CpuConsumption__c</fullName>
        <label>CPU Consumption %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DatasourceInternal__c</fullName>
        <label>DatasourceInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Datasource__c</fullName>
        <formula>CASE(wkitsm__DatasourceInternal__c,
&quot;tds&quot;,  $Label.wkitsm__datasourceTds,
&quot;unmanaged_network_scan&quot;, $Label.wkitsm__datasourceUnmanagedNetworkScan,
&quot;unmanaged_confirmed&quot;, $Label.wkitsm__datasourceUnmanagedConfirmed,
&quot;unmanaged_user_specified&quot;, $Label.wkitsm__datasourceCustomEndpoint,
&quot;&quot;, $Label.wkitsm__datasourceCustom,
wkitsm__DatasourceInternal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Datasource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DiscoverMethod__c</fullName>
        <description>Method used to discover this CI</description>
        <label>Discover Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DiscoverProfile__c</fullName>
        <description>Profile used to discover this CI.</description>
        <label>Discover Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DiskConsumption__c</fullName>
        <label>Disk Consumption %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DiskEncryption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disk Encryption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__DisposalDate__c</fullName>
        <label>Disposal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__DnsServers__c</fullName>
        <label>DNS Servers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DoesNeedUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs to be updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__DomainName__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__DuplicateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>DuplicateOf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wkitsm__Encryption__c</fullName>
        <label>Encryption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Interface__c</fullName>
        <label>Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__IpAddress__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsVirtual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Virtual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__LastLoggedInUser__c</fullName>
        <label>Last Logged In User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__LastObserved__c</fullName>
        <label>The time the asset was last observed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__MacAddress__c</fullName>
        <description>MAC Address</description>
        <label>MAC Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__MemoryConsumption__c</fullName>
        <label>Memory Consumption %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Memory__c</fullName>
        <label>Memory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__NatIpAddress__c</fullName>
        <description>Returns the IP Address of this client as seen from the Tanium Server.</description>
        <label>NAT IP Address</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__OnlineStatus__c</fullName>
        <label>Online Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__OpenPorts__c</fullName>
        <description>Returns the top 1000 (according to Nmap) open tcp ports.  Example: 135,443,445,902,912,1536,1537,1538,1539,1566</description>
        <label>Open Ports</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__OperatingSystem__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__OsVersion__c</fullName>
        <label>OS Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Power__c</fullName>
        <label>Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Processor__c</fullName>
        <label>CPU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ProcurementDate__c</fullName>
        <label>Procurement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Ram__c</fullName>
        <label>RAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Speed__c</fullName>
        <label>Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__SystemUuid__c</fullName>
        <label>System UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TaniumAssetId__c</fullName>
        <externalId>true</externalId>
        <label>TaniumAssetId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TaniumClientActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is actively managed by Tanium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__TaniumCmdbId__c</fullName>
        <description>This field holds the Id coming from the Tanium CMDB query</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Id coming from the Tanium CMDB query</inlineHelpText>
        <label>TaniumCmdbId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TotalDiskSpace__c</fullName>
        <label>Total Disk Space</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Uptime__c</fullName>
        <label>Uptime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__WirelessNetworks__c</fullName>
        <label>Wireless Networks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__All_Configuration_Items</fullName>
        <columns>ASSET.NAME</columns>
        <columns>wkitsm__ConfigurationItemClass__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wkitsm__TaniumCmdbId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Configuration Items</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__ITSC_All_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>wkitsm__DomainName__c</columns>
        <columns>wkitsm__OperatingSystem__c</columns>
        <columns>wkitsm__OsVersion__c</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>wkitsm__Manufacturer__c</columns>
        <columns>wkitsm__Model__c</columns>
        <columns>ASSET.RECORDTYPE</columns>
        <columns>wkitsm__ConfigurationItemClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>ITSC - All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>wkitsm__Application</fullName>
        <active>true</active>
        <description>Application</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__ApplicationServer</fullName>
        <active>true</active>
        <description>Application Server</description>
        <label>Application Server</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__BusinessProcess</fullName>
        <active>true</active>
        <description>Business Process</description>
        <label>Business Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__BusinessService</fullName>
        <active>true</active>
        <description>Business Service</description>
        <label>Business Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__DataCenter</fullName>
        <active>true</active>
        <description>Data Center</description>
        <label>Data Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Database</fullName>
        <active>true</active>
        <description>Database</description>
        <label>Database</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Endpoint</fullName>
        <active>true</active>
        <description>Unmanaged Endpoint</description>
        <label>Endpoint</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Service</fullName>
        <active>true</active>
        <description>Service</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__TaniumCustomCI</fullName>
        <active>true</active>
        <description>Tanium Custom Configuration Item</description>
        <label>Tanium Custom CI</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__TaniumDiscoverCI</fullName>
        <active>true</active>
        <description>Tanium CI found by Discover Scan</description>
        <label>Tanium Discover CI</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__TaniumManagedCI</fullName>
        <active>true</active>
        <description>Tanium Managed Configuration Item</description>
        <label>Tanium Managed CI</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__TaniumUnmanagedCI</fullName>
        <active>true</active>
        <description>Tanium Unmanaged Configuration Item</description>
        <label>Tanium Unmanaged CI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>